# rtsr

./: 0001-Renamed-CMakeLists.txt.patch  CMakeLists.txt  FindLIBIGL.cmake  LICENSE  README.md  cmd.txt  horse8.off  libigl_static_build.patch  old2.off  package.xml
src/: .DataSet.cpp.swp  CMakeLists.txt  CudaSolver.hpp  DataROS.cpp  DataROS.hpp  DataSet.cpp  DataSet.hpp  EqHelpers.hpp  EqHelpers.tpp  Mesh.cpp  Mesh.hpp  Mesh.tpp  Util.cpp  Util.hpp  main.cpp
tools/: error_plot.m  error_w_0_5_par_cpu.csv  error_w_0_5_seq_cpu.csv  error_w_1_0_par_cpu.csv  error_w_1_0_seq_cpu.csv  error_w_1_5_par_cpu.csv  error_w_1_5_seq_cpu.csv  j_transpose_j_matlab_helper.m
